--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,12 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:5173
+SANCTUM_STATEFUL_DOMAINS=localhost,localhost:3000,localhost:5173,127.0.0.1,127.0.0.1:3000,127.0.0.1:5173,127.0.0.1:8000,::1
+
+SEND_EMAIL_NOTIFICATIONS=true
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
